[gd_scene load_steps=6 format=2]

[ext_resource path="res://PopupPause.gd" type="Script" id=1]
[ext_resource path="res://TombolFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Wood and Paper UI/Prefabs/6.png" type="Texture" id=3]
[ext_resource path="res://TombolPopup.tres" type="StyleBox" id=4]
[ext_resource path="res://sounds/switch23.ogg" type="AudioStream" id=5]

[node name="PopupPause" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 17.0
margin_right = 98.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 68.0
margin_bottom = 16.0
custom_constants/shadow_offset_x = 0
custom_fonts/font = ExtResource( 2 )
text = "Pause"
align = 1
valign = 1

[node name="ButtonLanjutkan" type="Button" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 68.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.027451, 0.00392157, 0.00392157, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Lanjutkan"

[node name="ButtonMulaiLagi" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 68.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.027451, 0.00392157, 0.00392157, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Mulai Lagi"

[node name="ButtonKeluarPauseLevel1" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 68.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Keluar"

[node name="Tween" type="Tween" parent="."]

[node name="SoundTombol" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer/ButtonLanjutkan" to="." method="_on_ButtonLanjutkan_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMulaiLagi" to="." method="_on_ButtonMulaiLagi_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonKeluarPauseLevel1" to="." method="_on_ButtonKeluarPauseLevel1_pressed"]
